# polygon

./: .gitignore  Cargo.toml  README.md  TODO.md  doc-style.css
.cargo/: config.toml
examples/: basic.rs  decoder.rs  llm_exploration.rs  query.rs  table.rs  test_tools.rs  typed_query.rs
examples/gui_example/: Cargo.toml
examples/gui_example/src/: main.rs
src/: client.rs  endpoint.rs  error.rs  execute.rs  lib.rs  processor.rs  query.rs  request.rs  response.rs  rest.rs  schema.rs  tool_use.rs
src/decoder/: ticker.rs
src/processor/: decoder.rs  raw.rs  table.rs
src/request/: aggs.rs  common.rs  financials.rs  tickers.rs
src/request/aggs/: aggregates.rs  daily_open_close.rs  grouped_daily.rs  previous_close.rs
src/request/tickers/: all.rs  details.rs  events.rs  news.rs  related.rs  types.rs
src/response/: aggs.rs  financials.rs  ticker.rs
src/rest/: aggs.rs  decoded.rs  quotes.rs  raw.rs  table.rs
src/rest/decoded/: aggs.rs  financials.rs  ticker.rs  tickers.rs
src/rest/raw/: aggs.rs  financials.rs  quotes.rs  tickers.rs
src/rest/table/: aggs.rs  financials.rs  tickers.rs
src/schema/: aggs.rs  financials.rs  ticker.rs
