[package]
name = "polygon"
version = "0.1.0"
edition = "2024"
description = "Rust client library for polygon.io"
license = "MIT"
repository = "https://github.com/inboard-ai/polygon"

[dependencies]
reqwest = { version = "0.12", optional = true, features = ["json"] }
dotenvy = { version = "0.15", optional = true }
decoder = { version = "0.0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
decoder = { version = "0.0.3" }
dotenvy = { version = "0.15" }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
dotenvy = ["dep:dotenvy"]
decoder = ["dep:decoder"]

[[example]]
name = "basic"
required-features = ["dotenvy"]
