[package]
name = "polygon"
version = "0.1.1"
edition = "2024"
description = "Rust client library for polygon.io"
license = "MIT"
repository = "https://github.com/inboard-ai/polygon"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--extend-css", "doc-style.css"]

[dependencies]
reqwest = { version = "0.12", optional = true, features = ["json"] }
dotenvy = { version = "0.15", optional = true }
decoder = { version = "0.0.3", optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
decoder = { version = "0.0.3" }
dotenvy = { version = "0.15" }
serde_json = "1.0"

[features]
default = ["reqwest", "decoder"]
reqwest = ["dep:reqwest"]
dotenvy = ["dep:dotenvy"]
decoder = ["dep:decoder", "dep:serde_json", "dep:serde_urlencoded"]

[[example]]
name = "basic"
required-features = ["dotenvy"]

[[example]]
name = "decoder"
required-features = ["dotenvy", "decoder"]

[[example]]
name = "query"
required-features = ["dotenvy", "decoder"]
