[package]
name = "polygon"
version = "0.1.2"
edition = "2024"
description = "Rust client library for polygon.io"
license = "MIT"
repository = "https://github.com/inboard-ai/polygon"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--extend-css", "doc-style.css"]

[workspace]
members = [".", "examples/gui_example"]

[dependencies]
reqwest = { version = "0.12", optional = true, features = ["json"] }
dotenvy = { version = "0.15", optional = true }
decoder = { version = "0.0.3", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
polars-core = { version = "0.51", optional = true, default-features = false }
polars-io = { version = "0.51", optional = true, default-features = false, features = [
    "json",
] }
schemars = { version = "0.8", optional = true, features = ["derive"] }
arc-swap = { version = "1.7.1", optional = true }
emporium-core = { path = "../emporium/core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
decoder = { version = "0.0.3" }
dotenvy = { version = "0.15" }
serde_json = "1.0"

[features]
default = ["reqwest", "decoder", "dep:arc-swap"]
reqwest = ["dep:reqwest"]
dotenvy = ["dep:dotenvy"]
decoder = [
    "dep:decoder",
    "dep:serde",
    "dep:serde_json",
    "dep:schemars",
    "dep:serde_urlencoded",
]
table = [
    "dep:polars-core",
    "dep:polars-io",
    "dep:serde",
    "dep:serde_json",
    "dep:schemars",
]

[[example]]
name = "basic"
required-features = ["dotenvy"]

[[example]]
name = "decoder"
required-features = ["dotenvy", "decoder"]

[[example]]
name = "query"
required-features = ["dotenvy", "decoder"]

[[example]]
name = "table"
required-features = ["dotenvy", "table"]

[[example]]
name = "llm_exploration"
required-features = ["dotenvy", "table"]

[[example]]
name = "typed_query"
required-features = ["dotenvy", "table"]
